--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: E4tools
 Type: Package
-Title: Management and Processing Tools for Data Produced by the Emaptica E4
+Title: Management and Processing Tools for Data Produced by the Empatica E4
 Version: 0.1.0
 Authors@R: person("Evan", "Kleiman", email = "evan.kleiman@rutgers.edu",
   role = c("aut", "cre"))
