--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,4 +10,7 @@ Encoding: UTF-8
 LazyData: true
 Imports: BBmisc, DataCombine, signal, stats, utils
 RoxygenNote: 6.1.1
-
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
