--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Description: Process and manage the data from the Empatica E4. All functions ope
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-Imports: BBmisc, DataCombine, signal, stats, utils, anytime, chron, data.table, ggplot2, scales
+Imports: BBmisc, DataCombine, signal, stats, utils, anytime, chron, data.table, ggplot2, scales, accelerometry
 RoxygenNote: 6.1.1
 Suggests: 
     knitr,
